--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -30,6 +30,6 @@ input[type=text], select {
     <label for="pup_age">Age:</label>
     <input type="text" name="age" id="pup_age" placeholder="Text Here...">
   </div>
-  <input type="submit" name="submit" value="Submit" id="submit">
+  <input type="submit"  value="Submit">
 
 </form>
