--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -14,6 +14,10 @@ input[type=text], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
+input[type=submit] {
+  padding: 1em;
+}
 </style>
 
 
