--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -17,7 +17,7 @@ input[type=text], select {
 </style>
 
 
-<form  action="/new" method="POST">
+<form  action="/puppy" method="POST">
   <div>
     <label for="pup_name">Name:</label>
     <input type="text" name="name" id="pup_name" placeholder="Text Here...">
